Code Review: Fixed whitespace and quotes.  Changed #whole-page to .container.top-level

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
     /*border: 1px solid lightgrey !important;  /!*just to see the layout *!/*/
 }
 
-#whole-page {
+.container.top-level { /*This used to be #whole-page but was changed to be a class selector*/
     max-width: 900px;
     margin-left: auto;
     margin-right: auto;
@@ -37,7 +37,7 @@ a,
 }
 
 .about li {
-    list-style-type:square;
+    list-style-type: square;
 }
 
 /********Showacase**********/
@@ -60,8 +60,8 @@ nav {
 }
 
 nav img {
-    max-height:87px;
-    margin-top:17px;
+    max-height: 87px;
+    margin-top: 17px;
 }
 
 nav ul {
@@ -69,7 +69,7 @@ nav ul {
 }
 
 /****** < md breakpoint ********/
-@media screen and (max-width:992px) {
+@media screen and (max-width: 992px) {
     nav,
     nav ul {
         width: 100%;
@@ -80,6 +80,5 @@ nav ul {
         width: 33%;
         display: inline-block;
     }
-
 }
 
