--- a/css/responsive_boilerplate.css
+++ b/css/responsive_boilerplate.css
@@ -1,8 +1,14 @@
-img, embed, object, video {  /*never allow images to overflow their containers */
+img,
+embed,
+object,
+video {
+    /*never allow images to overflow their containers */
     max-width: 100%;
 }
 
-nav a, button {/*//make mobile tap targets at least big enough to press*/
+nav a,
+button {
+    /*//make mobile tap targets at least big enough to press*/
     min-width: 48px;
     min-height: 48px;
 }
